    * The fread method in the Sys::IO throw an exception if the return value is less than $nmemb and C<ferror(stream)> is non-zero.
    * The fwrite method in the Sys::IO throw an exception if the return value is less than $nmemb and C<ferror(stream)> is non-zero.
    * The fcntl method can not recieve object type $command_arg. Only Int or Sys::IO::Flock.
0.508 2023-12-04
  [Document Fix]
    * Fix the document of the new method in the Sys::Stat class. This method do not have arguments.
  [Incompatible Changes]
    * The cando method in the Sys::Stat class becomes private. 
    * The no_close field in the Sys::IO::FileStream is renamed to no_destroy.
    * The utime method in the Sys::IO class is moved to Sys::Time class.
    * The utimes method in the Sys::IO class is moved to Sys::Time class.
    
  [Bug Fix]
    * Fix the bug that the spvm_stdin, spvm_stdout, spvm_stderr in the Sys::IO class do not return correct values.
    * Fix the bug that the STDIN, STDOUT, STDERR in the Sys class do not return correct values.
    
0.507 2023-12-01

  [New Features]
    * Add the following user/group methods to the Sys class.
    
      real_user_id

      effective_user_id

      real_group_id

      effective_group_id

      set_real_user_id

      set_effective_user_id

      set_real_group_id

      set_effective_group_id

      setpwent

      endpwent

      getpwent

      setgrent

      endgrent

      getgrent

      getgroups

      setgroups

      getpwuid

      getpwnam

      getgrgid

      getgrnam


0.506 2023-12-01
  [Incompatible Changes]
    * The definition of the localtime method in the Sys::Time is changed.
      [Before]
      static method localtime : Sys::Time::Tm ($time : long);
      [After]
      static method localtime : Sys::Time::Tm ($time_ref : long*);
      
    * The definition of the gmtime method in the Sys::Time is changed.
      [Before]
      static method gmtime : Sys::Time::Tm ($time : long);
      [After]