@@ -4,6 +4,8 @@
     * The fread method in the Sys::IO throw an exception if the return value is less than $nmemb and C<ferror(stream)> is non-zero.
     * The fwrite method in the Sys::IO throw an exception if the return value is less than $nmemb and C<ferror(stream)> is non-zero.
     * The fcntl method can not recieve object type $command_arg. Only Int or Sys::IO::Flock.
+    * The get_readlink_buffer_size method in the Sys::IO is removed.
+    
 0.508 2023-12-04
   [Document Fix]
     * Fix the document of the new method in the Sys::Stat class. This method do not have arguments.
